src/App.css
:root {
  --task-bg-color: #fbc28a;
  --main-color: #191919;
  --dashboard-bg-color: #FAF0E6;
}

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden; /* This prevents the entire page from scrolling */
}

header, footer {
  flex-shrink: 0; /* Prevents them from squishing if content grows */
}

a {
  text-decoration: inherit;
  color: inherit;
}

button {
  color: white;
  border: none;
  cursor: pointer;
  padding: 0.8em;
  border-radius: 5px;

}

label {
  display: block;
  margin: 1rem auto;
}

input {
  margin-left: .5rem;
  margin-right: .5rem;
}

select {
  margin-left: .5rem;
  margin-right: .5rem;
}

.app-container {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.dashboard {
  display: flex;
  flex-direction: column;
  width: 85vw;
  height: 84vh;
  flex-grow: 1;
  justify-content: center;
}

.dashboard-header {
  display: flex;
  gap: 10px;
  padding-inline: 10px;
  padding-top: 10px;
  justify-content: space-between;
  align-items: center;
}

.search-bar {
  flex-basis: auto;
  flex-grow: 1;
  height: 2rem;
  line-height: 2rem;
  margin: 0px;
}

.dashboard-columns {
  display: flex;
  gap: 10px;
  flex-grow: 1;
  padding-inline: 10px;
  padding-block: 10px;
  justify-content: center;
}

.navbar {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: var(--dashboard-bg-color);
  border-bottom: 2px solid var(--main-color);
  color: var(--main-color);
  height: 10vh;
}

.logo {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
  
}

.logo-img {
  width: 200px;
}

.footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: var(--dashboard-bg-color);
  border-top: 2px solid var(--main-color);
  color: var(--main-color);
  width: 100%;
  height: 6vh;
}

.sidebar {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: left;
  align-items: start;
  background-color: var(--dashboard-bg-color);
  color: var(--main-color);
  border-right: 2px solid var(--main-color);
  max-width: 15vw;
}

.sidebar-menu {
  list-style: none;
}

.sidebar-menu a, h3 {
  text-decoration: none;
  font-family: Arial, Helvetica, sans-serif;
}

.footer button {
  color: white;
  font-family: Arial, Helvetica, sans-serif;
}

.column {
  flex: 1;
  color: white;
  border: 4px solid var(--main-color);
  border-radius: 10px;
}

.column h3 {
  color: white;
  background-color: var(--main-color);
  margin: 0;
  height: 6vh;
  line-height: 6vh; 
  text-align: center;
}

.app-content {
  background-color: var(--dashboard-bg-color);
  display: flex;
  flex: 1;
}

.task {
  background-color: var(--task-bg-color);
  box-shadow: 0 2px 3px 2px rgba(0, 0, 0, 0.4);
  color: var(--main-color);
  border-radius: 10px;
  margin: 10px;
  padding: 10px;
  display: flex;
  flex-direction: column;
}

.task h4 {
  margin: 0;
}

#add-task-button {
  background-color: var(--main-color);
  display: flex;
  justify-content: center;
  align-items: center;
}

.add-task button {
  background-color: var(--main-color);
  margin: 10px;
}

.task-footer {
  display: flex;
  flex-direction: row;
  flex-grow: 0;
  justify-content: space-between;
  align-items: end;
  margin: 0;
}

.task-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.task-header-detail {
  text-align: center;
}

.task-header button {
  color: white;
  font-family: Arial, Helvetica, sans-serif;
}

.task-header-child {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.3em;
}

.task-header-child:hover {
  cursor: pointer;
}

.task-footer-child {
  margin-top: 0;
  margin-bottom: 0;
}

.task-page {
  display: flex;
  flex: 1;
  justify-content: center;
}

.task-details {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 30vw;
}

.task-detail-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.task-details-column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.about {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  align-items: center;
  gap: 2em;
  text-align: center;
}

.about-info {
  width: 50vw;
  text-align: justify;
}

.about-info h1 {
  text-align: center;
}

.team-info {
  width: 50vw;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.not-found {
  display: flex;
  flex-grow: 1;
  justify-content: center;
  align-items: center;
}

.add-task {
  position: fixed;
  z-index: 1000;

  left: 0;
  right: 0;

  top: 0;
  bottom: 0;

  display: flex;
  justify-content: center;
  align-items: center;
}

.form {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  color: var(--main-color);
  background-color: var(--task-bg-color);
  border: 4px solid var(--main-color);
  border-radius: 10px;
  padding: 2em;
  width: 50%;
  height: 50%;
}

.form-header-add-task {
  display: flex;
  gap: 10px;
  padding-inline: 10px;
  padding-top: 10px;
  justify-content: space-between;
  align-items: center;
}

.form-header-add-task input {
  flex-basis: auto;
  flex-grow: 1;
  height: 1rem;
  line-height: 2rem;
  margin: 0px;
}

.form-details-add-tasks {
  display: flex;
  gap: 10px;
  flex-grow: 1;
  padding-inline: 10px;
  padding-block: 10px;
  justify-content: center;
}

.form-column-add-task {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.form label {
  display: flex;
  align-items: center;
  flex-grow: 1;
  width: 100%;
}

.form h2 {
  margin: 0px;
}

.addTaskFormDetails{
  flex-direction: column;
}

